[gd_scene load_steps=10 format=3 uid="uid://bsihg5nrjaxgv"]

[ext_resource type="Script" path="res://Scripts/Enemy/spreadshot_enemy.gd" id="1_xaa74"]
[ext_resource type="PackedScene" uid="uid://cady78rxdcbsp" path="res://Scripts/Enemy/basic_bullet.tscn" id="2_76m5w"]
[ext_resource type="Texture2D" uid="uid://cslq6nq4wtccy" path="res://assets/icon.svg" id="2_ag1n5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uoumu"]
size = Vector2(25.625, 25)

[sub_resource type="Animation" id="Animation_4jmq4"]
length = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kn6gt"]
resource_name = "hit_flash"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o0wns"]
_data = {
"RESET": SubResource("Animation_4jmq4"),
"hit_flash": SubResource("Animation_kn6gt")
}

[sub_resource type="Animation" id="Animation_tvmn4"]
resource_name = "explode"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lqb67"]
_data = {
"explode": SubResource("Animation_tvmn4")
}

[node name="spreadshot_enemy" type="Area2D"]
script = ExtResource("1_xaa74")
Bullet = ExtResource("2_76m5w")
reload_time = 3.0
arcs_in_burst = 3
time_between_shots_in_burst = 0.05

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_ag1n5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9.53674e-07, 0)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_uoumu")

[node name="Reload_Timer" type="Timer" parent="."]

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_o0wns")
}

[node name="DeathAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_lqb67")
}

[node name="Burst_Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="Reload_Timer" to="." method="_on_timer_timeout"]
